# lexoffice-analytics

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: main.rs
lexoffice-cli/: Cargo.toml  Dockerfile  README.md  lexoffice-api.yml
lexoffice-cli/.sqlx/: query-2070ee39053a04ac514db83b29dc72f9fb46173408ee7e8c7476f608e12db84c.json  query-2a42e6062209132f3afd40d0a653e696ad6c7508a7ee5d72964f3cd4fce41d73.json  query-36fe54a217578da7251662fc065f3e209fdf70a990e73c238d1bf0cce15354ff.json  query-42d00494952e8dc50244ca1c07b0633ddd88f2b02942feb55aefae26ac33aa02.json  query-4dd40f151c9311619b06cb9377daa961a9e12f495285d7fd1b4d9b5f138a00d6.json  query-5845edb9f479d27418315142596c5a313769a319e6c07b627d4e594c8f9c3698.json  query-5b53629303182458511dfb965193ec12cd209c78b2a54ce9a8a0b08e07d4a503.json  query-5fdcc150cd97f3ae2e53fd77d90f73b5e1e635dc715106e07a045446f160a1dd.json  query-7207ca675dd39f0d2242c203c7dbea35fc72934e2798cf6297f978c7c86e57b7.json  query-830b93acbf764a3896b1c724f471c4e14b3bf6311ffbd2011b2dd54f53c69142.json  query-85a21339431d134812d3889ac82b017098608a2254feda95cee75aa98c08617c.json  query-a8baa127243dfc5285b9e4fc798b4aecd3b2ed60bbbd5e28de3063673afb3af6.json  query-addfccab44f439bfb4674cdebf9b32dc99d778ec97b10b7341885e77f0813969.json  query-b1748a4c309f013376ca3612f4275059da05a144777b3daebe47541b6c8cdf95.json  query-b695d499c2f74332612095a42fdc9ed106ecd1d7a81d449e61c1f242e92245ca.json  query-c123e47cb3db8097242a211e5f224996854a9d181d6511d5c91b876eea3c8b05.json  query-c303727668f408492fdfb2a6abfc87fc2a54f605100bdd1c2e56fa104bd4a1ec.json  query-eb8e12e633319a02ea84b99739bb0501001f468ea1a1478532c995f28b15d5b8.json
lexoffice-cli/migrations/: 20240105131747_init.down.sql  20240105131747_init.up.sql  20240120110805_change_float_to_numeric.down.sql
lexoffice-cli/migrations/2023-12-21-120551_init/: up.sql
lexoffice-cli/openapi/: README.md
lexoffice-cli/openapi/docs/: Address.md  CompanyDetails.md  Contact.md  ContactAddresses.md  ContactsApi.md  CountriesApi.md  Country.md  CreditNote.md  CreditNotesApi.md  CustomerOrVendorDetails.md  DeliveryNote.md  DeliveryNotesApi.md  DownPaymentInvoice.md  DownPaymentInvoicesApi.md  Dunning.md  DunningsApi.md  File.md  Invoice.md  InvoicesApi.md  LineItem.md  LineItemQuotation.md  OrderConfirmation.md  OrderConfirmationsApi.md  OrganizationPaymentConditions.md  Payment.md  PaymentConditions.md  PaymentItem.md  PaymentsApi.md  PostingCategoriesApi.md  PostingCategory.md  ProfileApi.md  Quotation.md  QuotationsApi.md  RolesDetails.md  ShippingConditions.md  SortProperties.md  TaxAmount.md  TotalPrice.md  UnitPrice.md  UserProfile.md  (+6 more)
lexoffice-cli/openapi/src/apis/: contacts_api.rs  countries_api.rs  credit_notes_api.rs  delivery_notes_api.rs  down_payment_invoices_api.rs  dunnings_api.rs  invoices_api.rs  order_confirmations_api.rs  payments_api.rs  posting_categories_api.rs  profile_api.rs  quotations_api.rs  vouchers_api.rs
lexoffice-cli/openapi/src/models/: address.rs  company_contact_person.rs  company_details.rs  contact.rs  contact_addresses.rs  contact_email_addresses.rs  country.rs  credit_note.rs  customer_or_vendor_details.rs  delivery_note.rs  down_payment_invoice.rs  dunning.rs  error_msg.rs  file.rs  invoice.rs  line_item.rs  line_item_quotation.rs  order_confirmation.rs  organization_payment_conditions.rs  payment.rs  payment_conditions_payment_discount_conditions.rs  payment_item.rs  quotation.rs  (+18 more)
lexoffice-cli/src/: api.rs  main.rs  models.rs  sync.rs  utils.rs
lexoffice-cli/src/db/: mod.rs  models.rs  schema.rs
lexoffice-cli/src/lexoffice/: mod.rs
lexoffice-models/: Cargo.toml
lexoffice-models/src/: lib.rs
(+38 files in other folders)
