[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sync = { path = "../sync" }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"]}
futures = "0.3"
dotenvy = "0.15"
clap = { version = "4.4.14", features = ["cargo"] }
log = "0.4"
simple_logger = {version = "4.3.3", features = ["stderr"]}