[package]
name = "lexoffice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "./openapi" }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"]}
futures = "0.3"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "bigdecimal" ] }
dotenvy = "0.15"
clap = { version = "4.4.14", features = ["cargo"] }
log = "0.4"
simple_logger = {version = "4.3.3", features = ["stderr"]}
num-traits = "0.2.17"