[package]
name = "lexoffice-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lexoffice-models = { path = "../lexoffice-models" }
tokio = {version = "1.32.0", features = ["full"]}
lexoffice_api = { git = "https://github.com/maikerlab/lexoffice_api_rs.git" }
serde = "1.0.188"
futures = "0.3.28"
dotenvy = "0.15"
simple_logger = {version = "4.3.3", features = ["stderr"]}
log = "0.4.20"
clap = { version = "4.4.14", features = ["cargo"] }
chrono = "0.4.38"
indicatif-log-bridge = "0.2.2"
indicatif = "0.17.8"
colored = "2.1.0"
leaky-bucket = "1.1.2"
warp = "0.3.7"
once_cell = "1.19.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
