[package]
name = "lexoffice-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
openapi = { path = "../openapi" }
uuid = { version = "1.7.0", features = ["v4"] }

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]