[package]
name = "lexoffice-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
openapi = { path = "../openapi" }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.38"
bson = { version = "2.10.0", features = ["chrono-0_4", "serde_with", "serde_with-3"] }
serde_with = "3.8.1"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime", "bson-chrono-0_4"]