[package]
name = "lexoffice-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
lexoffice_api = { git = "https://github.com/maikerlab/lexoffice_api_rs.git" }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.38"
bson = { version = "2.10.0", features = ["chrono-0_4", "serde_with", "serde_with-3"] }
serde_with = "3.8.1"
